# atmacup8_1

./: .gitignore  README.md  pyproject.toml
src/: preprocessing.py  train.py
src/models/: base.py  gbdt.py  split.py
src/utils/: __init__.py  feature.py
